k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-demo
spec:
  type: NodePort
  selector:
    app: cicd-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
